--- a/google.html
+++ b/google.html
@@ -97,9 +97,13 @@
 			Mandy
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Culture
+			</br></br>
+Ce sont nos employés qui font notre société. Nous engageons des personnes intelligentes et déterminées, et préférons les compétences à l’expérience. Même si les employés de Google (ou "Googleurs") partagent une même vision et un même objectif, ils viennent de tous les horizons et parlent plusieurs dizaines de langues différentes, afin de mieux représenter nos utilisateurs internationaux. Et lorsque les Googleurs ne travaillent pas, leurs centres d’intérêt vont du vélo à l’apiculture, en passant par le frisbee et le foxtrot. 
+Nous souhaitons préserver l’esprit d’ouverture souvent associé aux start-ups, dans lequel chaque employé joue un rôle important et est encouragé à partager ses idées et ses opinions. À l’occasion de nos réunions hebdomadaires (les fameuses "TGIF"), mais également par e-mail ou dans la cafétéria, les Googleurs posent directement leurs questions à Larry, Sergey et aux autres responsables, concernant de nombreux sujets. Nos bureaux et nos cafétérias ont été conçus pour favoriser les échanges entre Googleurs d’une même équipe ou d’équipes différentes, mais également pour inciter les conversations professionnelles comme amicales. 
+			</br></br>
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://www.google.com/about/company/facts/culture/">Culture</a>
 		</h3>
 	</div>	
     <div class="element">
