--- a/google.html
+++ b/google.html
@@ -137,6 +137,7 @@ Nous souhaitons préserver l’esprit d’ouverture souvent associé aux start-u
 			</br></br>
 		
 		</p>
+		<img src="/export/src/mandy.qiao/tp.git/TP3/google culture.jpg" />
 		<h3>Source : <a href="https://www.google.com/about/company/facts/culture/">Culture</a>
 		</h3>
 	</div>	
